fixes spacing on single column pages

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -20,6 +20,22 @@ html {
   width: 100%;
 }
 
+/**********************
+* Single Column Pages *
+**********************/
+
+section.maps {
+  margin-top: 100px;
+}
+
+.map-card {
+  margin: 0 auto;
+  margin-bottom: 4em;
+}
+
+/*******************
+* Two Column Pages *
+*******************/
 // Any sticky elements to left of the page
 .grid {
   display: grid;
@@ -35,33 +51,7 @@ html {
     z-index: 1;
   }
 
-  section.maps {
-    margin-top: 100px;
-
-    // Spacing between maps on right column
-    .map-card {
-      margin: 0 auto;
-      margin-bottom: 2em;
-    }
+  .map-card {
+    margin-bottom: 2em;
   }
 }
-
-
-
-//TODO: 
-// Make 2 columns
-// left column stikcy 
-// right column scrollable
-// create card elements
-
-
-
-// body {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-//   min-height: 100vh;
-//   background: #a3d0db;
-//   background: linear-gradient(227deg, #a3d0db 0%, #a3b0db 20%, #a3addb 34%, #a3dbd0 59%, #a3d0db 74%, #a3d0db 100%);
-// }
